--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.13.0",
+    "@emotion/serialize": "^1.3.0",
+    "@emotion/styled": "^11.13.0",
+    "@emotion/utils": "^1.4.0",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.2",
     "framer-motion": "^11.3.2",
     "next": "14.2.5",
     "react": "^18",
+    "react-awesome-reveal": "^4.2.13",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
   },
